Replaces embedded pdf with png to fix render on ios.

--- a/src/app/components/resume/resume.component.scss
+++ b/src/app/components/resume/resume.component.scss
@@ -1,78 +1,39 @@
 .resume-container {
     z-index: 5;
-    
-    box-shadow: 0 0 20px black;
-    // opacity: 1;
-    // transition: opacity;
-    // animation: fadeOutAnimation ease-in-out 1s; 
-    // animation-fill-mode: both; 
-
+    box-shadow: 0 0 20px #000;
     position: relative;
     overflow: hidden;
-}
-
-.resume-container:hover {
-    // opacity: 0;
-    // transition: opacity;
-    // animation: fadeInAnimation ease-in-out .5s; 
-    // animation-fill-mode: both; 
-}
-
-.resume-img {
     width: 100%;
 }
-// .resume-container {
-//     position: relative;
-//     overflow: hidden;
-// }
 
-.link-container {
-    // content: '';
+.resume-container img {
+    width: 100%;
+    transition: .3s;
+}
+
+.resume-container:hover img {
+    opacity: .5;
+}
+
+.resume-container .resume-link {
     z-index: 1;
     position: absolute;
     width: 100%;
-    height: 100%;
-    // top: -4em;
+    left: 0;
+    top: -4em;
+    height: 4em;
     background: #000;
     transition: 0.5s;
+    color: #fff;
+    text-decoration: none;
+    text-align: center;
+
+    span {
+        line-height: 4em;
+        position: relative; 
+    }
 }
 
-.resume-img:hover ~ .link-container {
+.resume-container:hover .resume-link {
     top: 0;
-  }
-// a:hover:before {
-//     top: 0;
-// }
-
-// a:before {
-//     content: '';
-//     z-index: 1;
-//     position: absolute;
-//     width: 100%;
-//     height: 4em;
-//     top: -4em;
-//     background: rgb(0, 0, 0);
-//     transition: 0.5s;
-// }
-
-// a:hover:before {
-//     top: 0;
-// }
-
-@keyframes fadeInAnimation { 
-    0% { 
-        opacity: 1;
-    }
-    100% { 
-        opacity: .5;
-    } 
-}
-
-@keyframes fadeOutAnimation { 
-    0% { 
-        opacity: .5;
-    }
-    100% { 
-        opacity: 1;
-    } 
 }
